<resources>
    <string name="app_name">laboom_foods</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="not_registered">not registered</string>
    <string name="registered">registered</string>
    <string name="confirm_password">confirm_password</string>
    <string name="already_registered">already_registered</string>
    <string name="asLogin">login</string>
    <string name="register">register</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_virtual_waitress">VirtualWaitress</string>
    <string name="title_activity_finalize_order">finalize_order</string>
    <string name="title_activity_thankyou">thankyou</string>
    <string name="ho">ho</string>
</resources>

