<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/oo">
    tools:context=".register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/background">
        <ImageView
            android:layout_width="203dp"
            android:layout_height="91dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/lo" />

    <EditText
        android:id="@+id/un"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        android:hint="@string/username"></EditText>
    <EditText
        android:id="@+id/pas"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        android:hint="@string/password"></EditText>
    <EditText
        android:id="@+id/cnfpas"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textColorHint="#FFFFFF"></EditText>
        <Button
            android:id="@+id/bu_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/angle"
            android:layout_below="@+id/editText_Marks"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="28dp"
            android:layout_alignParentBottom="true"
            android:padding="16dp"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/register" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textStyle="bold"
            android:textColor="#F12C2C"
           ></TextView>
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/asLogin"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>


